helm/demoapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demoapi-service
spec:
  selector:
    app: demoapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
