helm/demoapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoapi-ingress
  labels:
    app: demoapi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /demoapi
            pathType: Prefix
            backend:
              service:
                name: demoapi-service
                port:
                  number: 80
